@@ -1,3 +1,7 @@
+2007-06-05  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/xml.erl: Add new helper function get_subtag_cdata/2.
+
 2007-05-31  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_vcard_odbc.erl: Fix for previous commit (thanks to
